<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_red_gradient"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/app_icon_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_share_food_image"
        android:contentDescription="@string/app_icon_description"/>

    <TextView
        android:id="@+id/app_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="21pt"
        android:layout_below="@+id/app_icon_image" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/edit_text_no_color"
        android:drawableLeft="@drawable/ic_email_edit_text"
        android:drawableStart="@drawable/ic_email_edit_text"
        android:drawablePadding="16dp"
        android:hint="@string/email_hint"
        android:autofillHints="email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorAlmostWhite"
        android:textSize="10pt"
        android:layout_below="@id/app_name_text"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/edit_text_no_color"
        android:drawableLeft="@drawable/ic_password_edit_text"
        android:drawableStart="@drawable/ic_password_edit_text"
        android:drawablePadding="16dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorAlmostWhite"
        android:textSize="10pt"
        android:layout_below="@id/email_edit_text"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_white_style"
        android:paddingLeft="24dp"
        android:paddingTop="8dp"
        android:paddingRight="24dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login_button_text"
        android:textColor="@color/colorRed"
        android:textSize="14pt"
        android:layout_below="@id/password_edit_text"/>

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAlmostWhite"
        android:textSize="7pt"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password_text"
        android:layout_below="@id/login_button"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_question_text"
            android:textColor="@color/colorAlmostWhite"
            android:textSize="7pt" />

        <TextView
            android:id="@+id/register_link_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/open_register_text"
            android:textColor="@color/colorWhite"
            android:textSize="7pt" />
    </LinearLayout>

</RelativeLayout>