<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/edit_text_black"
        android:hint="@string/search_food_post_hint_text"
        android:paddingLeft="8dp"
        android:drawablePadding="4dp"
        android:paddingRight="8dp"
        android:layout_marginBottom="8dp"
        android:drawableLeft="@drawable/ic_search_black_24dp"
        android:drawableStart="@drawable/ic_search_black_24dp"
        android:drawableRight="@drawable/ic_mic_black_24dp"
        android:drawableEnd="@drawable/ic_mic_black_24dp"
        android:textSize="8pt"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="6"
        tools:listitem="@layout/card_item_institute"
        />

    <TextView
        android:id="@+id/message_recycler_empty_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/no_food_post_with_filter"
        android:visibility="gone"
        />
    <Button
        android:id="@+id/create_food_post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_green_style"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:layout_gravity="center"
        android:text="@string/open_create_food_post_text"
        android:textColor="@color/colorWhite"
        android:textSize="10pt"/>
</LinearLayout>