<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_red_gradient"
    tools:context=".activity.RegisterActivity">

    <TextView
        android:id="@+id/app_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_centerHorizontal="true"
        android:text="Precisamos apenas de mais algumas informações para continuar"
        android:textColor="@color/colorWhite"
        android:textSize="9pt"/>



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_name_text"
        android:orientation="vertical"
        android:background="@drawable/general_box">
        <TextView
            android:id="@+id/radio_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_name_text"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:text="Você é uma pessoa:"
            android:textColor="@color/colorBlack"
            android:textSize="9pt"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio_title_text"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/doador_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorBlack"
                android:textColor="@color/colorBlack"
                android:checked="true"
                android:textSize="9pt"
                android:text="Física" />

            <RadioButton
                android:id="@+id/instituicao_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:buttonTint="@color/colorBlack"
                android:textColor="@color/colorBlack"
                android:textSize="9pt"
                android:text="Jurídica" />
        </RadioGroup>


        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="8dp"
            android:backgroundTint="@color/colorBlack"
            android:drawablePadding="10dp"
            android:hint="@string/name_text"
            android:inputType="textPersonName"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/cardview_shadow_start_color"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="8dp"
            android:backgroundTint="@color/colorBlack"
            android:drawablePadding="10dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorAlmostWhite"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorBlack"
            android:drawablePadding="10dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorAlmostWhite"
            android:textSize="10pt" />

        <Button
            android:id="@+id/save_info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_edit_text"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_green_style"
            android:layout_gravity="center"
            android:paddingLeft="24dp"
            android:paddingTop="16dp"
            android:paddingRight="24dp"
            android:paddingBottom="16dp"
            android:text="Salvar"
            android:textColor="@color/colorWhite"
            android:textSize="14pt" />
    </LinearLayout>
</RelativeLayout>